--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root{
-    --primary: #FFFFE4,
-    --secondary: #E8C1EE,
+    --primary: #FFFFE4;
+    --secondary: #E8C1EE;
 }
 
 html{
@@ -16,4 +16,41 @@ html{
 
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0%;
+        transform: translateY(50px)
+    }
+    to {
+        opacity: 100%;
+        transform: translateY(0px)
+    }
+}
+
+@keyframes slide-pop {
+    0% {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+    30% {
+        opacity: 0.6;
+        transform: translateY(-6px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.reveal{
+    animation: slide-pop linear;
+    animation-timeline: view();
+    animation-range: entry 20% cover 80%;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+    animation-direction: alternate;
+    animation-fill-mode: forwards;
 }
